# samskara

./: .gitignore  AI-init.cozo  CLAUDE.md  Cargo.toml  build.rs  flake.nix  world.db
data/: version_one_seed.cozo  version_one_seed_agent_roles.cozo  version_one_seed_statements.cozo  version_one_seed_tx_log.cozo
schema/: samskara-rpc.capnp  samskara-world-init.cozo  samskara-world-seed.cozo  samskara_editor.capnp  samskara_sandbox.capnp  samskara_world.capnp
src/: clone_manager.rs  jj_mirror.rs  lib.rs  main.rs  mcp.rs  rpc.rs  schema.rs
src/vcs/: commit.rs  mod.rs  restore.rs
tests/: codegen_pipeline.rs  roundtrip_codegen.rs  vcs_roundtrip.rs  version_one_cozoscript_examples.rs
