[package]
name = "samskara"
version = "0.1.0"
edition = "2024"

[lib]
name = "samskara"
path = "src/lib.rs"

[[bin]]
name = "samskara"
path = "src/main.rs"

[dependencies]
criome-cozo = { path = "../criome-cozo" }
samskara-lojix-contract = { path = "../samskara-lojix-contract" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
rmcp = { version = "0.16", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
blake3 = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"

[dev-dependencies]
rmcp = { version = "0.16", features = ["client", "transport-io"] }
