[package]
name = "samskara"
version = "0.1.0"
edition = "2024"

[lib]
name = "samskara"
path = "src/lib.rs"

[[bin]]
name = "samskara"
path = "src/main.rs"

[dependencies]
samskara-core = { path = "../samskara-core" }
criome-cozo = { path = "../criome-cozo" }
samskara-lojix-contract = { path = "../samskara-lojix-contract" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
rmcp = { version = "0.16", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
blake3 = "1"
capnp = "0.21"
capnp-rpc = "0.21"
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"

[build-dependencies]
samskara-core = { path = "../samskara-core" }
samskara-codegen = { path = "../samskara-codegen" }
criome-cozo = { path = "../criome-cozo" }
capnpc = "0.21"

[dev-dependencies]
rmcp = { version = "0.16", features = ["client", "transport-io"] }
samskara-codegen = { path = "../samskara-codegen" }
